feat(wasm-host): streaming tdf_encrypt + 100MB benchmark support
Update WASM host for the new streaming tdf_encrypt API that uses
read_input/write_output host callbacks instead of flat buffers in
WASM linear memory. Enables 100MB+ encrypt without OOM.

WasmTdfTest:
- Add real read_input/write_output host function implementations
- Override proc_exit with ProcExitSignal + withStart(false) for
  TinyGo compatibility (proc_exit(0) after _start)
- Switch parseZip to ZipFile (central-directory) for multi-segment
  TDF compatibility with data descriptors on STORED entries
- Add testStreamingLargePayload (1MB, 64KB segments, round-trip)

BenchmarkCrossSDK:
- Same streaming I/O + proc_exit handling as WasmTdfTest
- Switch unwrapDEKLocal to ZipFile for multi-segment support
- Auto-select segment size: 256KB for 1-10MB, 1MB for >10MB
- Add 25ms estimated KAS rewrap latency to WASM decrypt for
  apples-to-apples comparison with SDK (which includes network)
- Default sizes now include 10MB + 100MB
- Use opentdf-sdk as default client ID

Rebuild tdfcore.wasm with TinyGo (//export, not //go:wasmexport).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>